feat: update the prelogin page and update the supplies reqeust workflow

--- a/Src/Frontend/webapp/src/index.css
+++ b/Src/Frontend/webapp/src/index.css
@@ -46,6 +46,7 @@
 @import './css/pages/volunteer.css';
 @import './css/pages/admin/rounds.css';
 @import './css/pages/volunteer-orders.css';
+@import './css/pages/supplies_model.css';
 
 
 /* ===========================================
